apps/testhttpd/policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: policy
spec:
  mtls:
    mode: STRICT
