apps/testhttpd/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: sidecar
spec:
  egress:
    - hosts:
        - ~/*
